# fastapi_plotly

./: .gitignore  README.md  asgi.py  azure-pipelines.yml  config.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_devfastapiapp.yml
fastapi_plotly/: main.py
fastapi_plotly/api/: __init__.py
fastapi_plotly/api/finnhub/: earnings.py  ohlcv.py
fastapi_plotly/helpers/: parse_datetime.py
fastapi_plotly/static/: styles.css
fastapi_plotly/templates/: api.html  base.html  index.html  ohlcv.html
fastapi_plotly/views/: api.py  index.py  ohlcv.py
tests/: test_fastapi_plotly.py
