[tool.poetry]
name = "fastapi_plotly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
gunicorn = "^20.0.4"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
Jinja2 = "^2.11.3"
requests = "^2.25.1"
plotly = "^4.14.3"
aiofiles = "^0.6.0"
ciso8601 = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
